--- a/selinux.yml
+++ b/selinux.yml
@@ -1,16 +1,10 @@
 ---
-- name: Playbook for changing the SELINUX policy
-  hosts: erp
-  gather_facts: no
-  user: rjoy
-  become: true
-  tasks:
    - name: Set SELINUX to disabled for DB servers
      lineinfile: 
        dest: '/etc/selinux/config'
        regexp: '^SELINUX='
        line: 'SELINUX=disabled'
 
-   - name: Reboot the server
-     command: reboot
+   - name: Need for reboot after applying the DB requisites
+     debug: msg="Fix the encountered manual errors if any and reboot the server(s)"
 
